Add full name and sauce labs email as comment

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,10 @@
 # default owners the repo
 * @discombobulateme
+# Paloma Oliveira <paloma.oliveira@saucelabs.com>
 * @christian-bromann
+# Christian Bromann <christian.bromann@saucelabs.com>
 * @diemol
-
+# Diego Molina <diego.molina@saucelabs.com>
 
 
 # Samples for assigning codeowners below:
