Add repolinter dependency

--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
   "homepage": "https://github.com/saucelabs/automated-oss-quality-check#readme",
   "dependencies": {
     "@octokit/rest": "^18.0.6"
+    "repolinter": "^0.9.0"
   }
 }
