--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/saucelabs/automated-oss-quality-check#readme",
   "dependencies": {
-    "@octokit/rest": "^18.0.6"
+    "@octokit/rest": "^18.0.6",
     "repolinter": "^0.9.0"
   }
 }
