--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "homepage": "https://github.com/saucelabs/automated-oss-quality-check#readme",
   "dependencies": {
     "@octokit/rest": "^18.0.6",
+    "linguist": "^0.1.7",
     "rainbow-penguin": "^1.0.3",
-    "repolinter": "^0.9.0"
+    "repolinter": "^0.9.0",
+    "rimraf": "^3.0.2",
+    "simple-git": "^2.21.0"
   }
 }
