Add action to save JSON files created

--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -20,3 +20,8 @@ jobs:
       # Which file to act upon
       - name: Lint repositories
         run: node src/index.js
+      # Save output files in a directory in GitHub Actions
+      - uses: actions/upload-artifact@v2
+          with:
+            name: my-artifact
+            path: path/to/artifact/
