--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Lint repositories
         run: node src/index.js
       # Save output files in a directory in GitHub Actions
+      - run: mkdir -p path/to/artifact
+      - run: echo hello > path/to/artifact/world.txt
       - uses: actions/upload-artifact@v2
           with:
             name: automated-check-files
-            path: /home/runner/work/automated-oss-quality-check/automated-oss-quality-check/
+            path: path/to/artifact/
