--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Lint repositories
         run: node src/index.js
       # Save output files in a directory in GitHub Actions
-      - run: mkdir -p path/to/artifact
-      - run: echo hello > path/to/artifact/world.txt
+      - run: mkdir -p reports
       - name:
         uses: actions/upload-artifact@v2
         with: Lint reports
