--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -6,17 +6,21 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+
       # Add node
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
           node-version: 12
+
       # Add a project to work on
       - name: Clone Repository
         uses: actions/checkout@v2
+
       # Install dependencies
       - name: Install dependencies
         run: npm install
+
       # Which file to act upon
       - name: Lint repositories
         run: node src/index.js
@@ -27,5 +31,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: create-reports
-            path: reports/
+            path: reports/**/*.json
             retention-days: 7
