--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Lint repositories
         run: node src/index.js
 
-        # Save output files in a directory in GitHub Actions
+      # Save output files in a directory in GitHub Actions
       # - run: mkdir -p reports
       - name: Create lint reports with JSON
         uses: actions/upload-artifact@v2
         with:
           name: create-reports
-            path: reports/**/*.json
+            path: reports/
             retention-days: 7
