--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -1,7 +1,7 @@
 name: Automate in cloud
 
 on:
-  push |
+  push,
   schedule:
     # Minute [0,59] Hour [0,23] Day [1,31] Month [1,12] Week [0,6] 0=Sunday
     - cron:  '* * * * 2'
