--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -1,9 +1,10 @@
 name: Automate in cloud
 
 on:
-  [push,
+  push
   schedule:
-    - cron:  '* * * * 2']
+    # Minute [0,59] Hour [0,23] Day [1,31] Month [1,12] Week [0,6] 0=Sunday
+    - cron:  '* * * * 2'
 
 jobs:
   test:
