--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tool to automatically check our repositories health and quality",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,8 @@
     "repolinter": "^0.9.0",
     "rimraf": "^3.0.2",
     "simple-git": "^2.21.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
