Add github auth token in actions

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       # Add a project to work on
       - name: Clone Repository
