Change node version from number to string

--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: '12'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       # Add a project to work on
