--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: '12'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       # Add a project to work on
