Add auth token (#59)
* Add github auth token in actions

* Update snapshots

* Automatic package formating

* Change node version from number to string

* Add GITHUB_TOKEN as env in workflow

* Add personal token as env variable in utils file

--- a/.github/workflows/automated-in-cloud.yml
+++ b/.github/workflows/automated-in-cloud.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: '12'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Add a project to work on
       - name: Clone Repository
