--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
@@ -27,7 +28,7 @@
     "lint-staged": "^9.5.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
-    "sass": "^1.26.5",
+    "sass": "^1.32.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
