--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm install
       - name: Update ServiceWorker
         run: npm run update:sw
-      - run: npm run build
+      - run: npm run deploy
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
