--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,8 +19,7 @@ jobs:
         with:
           node-version: '12.x'
       - run: npm install
-      - name: Update ServiceWorker
-        run: npm run update:sw
+      - run: npm run build
       - run: npm run deploy
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
