--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,12 +36,8 @@ jobs:
         run: |
           npm install
 
-      - name: Build
+      - id: Build-Vue
         working-directory: frontend
-        run: |
-          npm run build
-
-      - name: Deploy
-        working-directory: frontend
-        run: |
-          npm run deploy
+        uses: xRealNeon/VuePagesAction@1.0.0
+        with:
+          repository: ${{GITHUB_REPOSITORY}}
