--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12'
-          repository: ${{GITHUB_REPOSITORY}}
+          repository: ${{github.repository}}
 
 
       # Install dependencies
