OSPO variables with xRealNeon

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,11 +20,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12'
-          repository: ${{github.repository}}
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          user_name: 'OSS Sauce Bot'
-          user_email: 'oss-sauce-bot@users.noreply.github.com'
-          commit_message: ${{ github.event.head_commit.message }}
 
       # Install dependencies
       - name: Install dependencies
@@ -47,5 +42,12 @@ jobs:
 
       - name: Deploy
         working-directory: frontend
-        run: |
-          npm run deploy
+        - uses: actions/checkout@v2
+        - id: Build-Vue
+          uses: xRealNeon/VuePagesAction@1.0.0
+          with:
+            user_name: 'OSS Sauce Bot'
+            user_email: 'oss-sauce-bot@users.noreply.github.com'
+            repository: ${{github.repository}}
+            token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+            commit_message: ${{ github.event.head_commit.message }}
