--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,9 +42,7 @@ jobs:
 
       - name: Deploy
         working-directory: frontend
-        - uses: actions/checkout@v2
-        - id: Build-Vue
-          uses: xRealNeon/VuePagesAction@1.0.0
+        - uses: xRealNeon/VuePagesAction@1.0.0
           with:
             user_name: 'OSS Sauce Bot'
             user_email: 'oss-sauce-bot@users.noreply.github.com'
