--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  repository: ${{github.repository}}
 
 jobs:
   deploy:
@@ -45,9 +46,10 @@ jobs:
 
       - name: Deploy
         working-directory: frontend
-          with:
-            repository: ${{github.repository}}
-            user_name: 'OSS Sauce Bot'
-            user_email: 'oss-sauce-bot@users.noreply.github.com'
         run: npm run deploy
+
+      - name: Commit
+        user_name: 'OSS Sauce Bot'
+        user_email: 'oss-sauce-bot@users.noreply.github.com'
+        commit_message: ${{ github.event.head_commit.message }}
 
