--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -49,7 +49,9 @@ jobs:
         run: npm run deploy
 
       - name: Commit
-        user_name: 'OSS Sauce Bot'
-        user_email: 'oss-sauce-bot@users.noreply.github.com'
-        commit_message: ${{ github.event.head_commit.message }}
+        uses: actions/checkout@v2
+          with:
+          user_name: 'OSS Sauce Bot'
+          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
 
