--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -49,8 +49,11 @@ jobs:
         run: npm run deploy
 
       - name: Commit
-        uses: actions/checkout@v2
-          with:
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          publish_branch: gh-pages
           user_name: 'OSS Sauce Bot'
           user_email: 'oss-sauce-bot@users.noreply.github.com'
           commit_message: ${{ github.event.head_commit.message }}
