Add working directory

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -45,6 +45,7 @@ jobs:
           npm run build
 
       - name: Deploy 🚀
+        working-directory: frontend
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
