--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           npm run build
 
-      - name: Build
+      - name: Deploy
         working-directory: frontend
         run: |
           npm run deploy
