--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,8 +31,14 @@ jobs:
         run: cd frontend && npm install
 
       - name: Build Vue
-        run: cd frontend && npm run deploy
-          # username: 'OSS Sauce Bot'
-          # reponame: ${{github.repository}}
-          # token: ${{ secrets.GITHUB_TOKEN }}
+        run: cd frontend && npm run build
 
+      - name: Deploy Vue Site
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist
+          publish_branch: gh-pages
+          user_name: 'OSS Sauce Bot'
+          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
