Add env and change name of the action

--- a/.github/actions/deploy/deploy.yml
+++ b/.github/actions/deploy/deploy.yml
@@ -1,4 +1,8 @@
-name: Deployment
+name: Deploy to GitHub Pages
+
+env:
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
 runs:
   using: "composite"
   steps:
