Delete backend steps

--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -12,20 +12,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # Gives access to repository
-      - name: Workflow access
+      - name: Gives access to repository
         uses: actions/checkout@v2
-      # Add node
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
           node-version: '12'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Generate frontend.json file
-        run: node src/index.js
 
       - name: Install dependencies in frontend
         run: cd frontend && npm install
