--- a/.github/actions/deploy.yml
+++ b/.github/actions/deploy.yml
@@ -1,13 +1,16 @@
 name: Deploy to GitHub Pages
 
-env:
-  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
 runs:
   using: "composite"
   steps:
     - name: Install dependencies in frontend
       run: cd frontend && npm install
+
+    - name: Copy frontend.json file artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: frontend.json
+        path: /frontend/public/
 
     - name: Build Vue
       run: cd frontend && npm run build
