Add deploy action to workflow

--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -8,7 +8,7 @@ env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 jobs:
-  deploy:
+  linting:
     runs-on: ubuntu-latest
     steps:
       - name: Gives access to repository
@@ -24,18 +24,11 @@ jobs:
       - name: Generate frontend.json file
         run: node src/index.js
 
-      - name: Install dependencies in frontend
-        run: cd frontend && npm install
+      - name: Create frontend.json as artifact
+        uses: actions/upload-artifact@v2
+          with:
+            name: frontend.json
+            path: frontend/public/frontend.json
 
-      - name: Build Vue
-        run: cd frontend && npm run build
-
-      - name: Deploy Vue Site
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./frontend/dist
-          publish_branch: gh-pages
-          user_name: 'OSS Sauce Bot'
-          user_email: 'oss-sauce-bot@users.noreply.github.com'
-          commit_message: ${{ github.event.head_commit.message }}
+      - name: Deploy using artifact
+        uses: ./.github/actions/deploy.yml
