Change deploy action path

--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -31,4 +31,4 @@ jobs:
             path: frontend/public/frontend.json
 
       - name: Deploy using artifact
-        uses: ./.github/actions/deploy
+        uses: ./.github/workflows/deploy.yml
