--- a/.github/workflows/deploy-on-push.yml
+++ b/.github/workflows/deploy-on-push.yml
@@ -17,4 +17,4 @@ jobs:
           node-version: '12'
 
       - name: Deploy using artifact
-        uses: ./.github/actions/deploy
+        uses: ./.github/workflows/deploy.yml
