--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_run:
-    workflows: ["daily-check", "deploy-on-push"]
+    workflows: ["Verify Repo Health Daily", "Deploy On Push To Main"]
     types:
       - completed
 
