--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_run:
-    workflows:
-      - Verify Repo Health Daily
-      - Deploy On Push To Main
+    workflows: ["Deploy On Push To Main"]
     types:
       - completed
 
