--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -8,7 +8,7 @@ env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 jobs:
-  linting:
+  Linting:
     runs-on: ubuntu-latest
     steps:
       - name: Gives access to repository
