Add jobs and daily health workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,30 +2,32 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_run:
-    workflows: ["Deploy On Push To Main"]
+    workflows: ["Verify Repo Health Daily", "Deploy On Push To Main"]
     types:
       - completed
 
-runs:
-  steps:
-    - name: Install dependencies in frontend
-      run: cd frontend && npm install
+jobs:
+  Install Frontend Copy Artifact & Deploy
+    runs:
+    steps:
+      - name: Install dependencies in frontend
+        run: cd frontend && npm install
 
-    - name: Copy frontend.json file artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: frontend.json
-        path: /frontend/public/
+      - name: Copy frontend.json file artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend.json
+          path: /frontend/public/
 
-    - name: Build Vue
-      run: cd frontend && npm run build
+      - name: Build Vue
+        run: cd frontend && npm run build
 
-    - name: Deploy Vue Site
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        personal_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./frontend/dist
-        publish_branch: gh-pages
-        user_name: 'OSS Sauce Bot'
-        user_email: 'oss-sauce-bot@users.noreply.github.com'
-        commit_message: ${{ github.event.head_commit.message }}
+      - name: Deploy Vue Site
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist
+          publish_branch: gh-pages
+          user_name: 'OSS Sauce Bot'
+          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
